--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,5 @@
 
 </router-outlet>
 
-<p>{{ statistique1.nom }}</p>
-<p>{{ statistique2.nom }}</p>
+<app-statistique [statistique]="statistique1"></app-statistique>
+<app-statistique [statistique]="statistique2"></app-statistique>
